# rust_gpu_union_issue

./: Cargo.toml  build.rs  rust-toolchain.toml
shader/: Cargo.toml
shader/src/: lib.rs
src/: main.rs
